import threading
import time
import os
import logging
from typing import Optional
import argparse
from influx_reader import InfluxReader, BOTS

from Analysis.Analysis_Model import AnalysisModel
from Analysis.Analysis_Controller import AnalysisController
from Analysis.Analysis_View import AnalysisView

default_bot = os.getenv("BOT")  # í™˜ê²½ë³€ìˆ˜ BOTì´ ìˆìœ¼ë©´ ê¸°ë³¸ê°’ìœ¼ë¡œ ì‚¬ìš©

logging.basicConfig(level=logging.INFO, format="%(asctime)s %(levelname)s %(message)s") # ë¡œê·¸ìš© -> DEBUGëŠ” ì•ˆë³´ì´ëŠ” ë¡œê·¸ì—¬ì„œ  DEBUGí• ë ¤ë©´ ì½”ë“œ ìˆ˜ì •í•˜ì…”ì•¼í•´ìš”ìš”


# Singleton íŒ¨í„´ìœ¼ë¡œ KETI_AnalysisEngine í´ë˜ìŠ¤ ì •ì˜
class KETI_AnalysisEngine:
    _instance = None
    _lock = threading.Lock()

    def __new__(cls, *args, **kwargs):
        if not cls._instance:
            with cls._lock:
                if not cls._instance:
                    cls._instance = super().__new__(cls)
        return cls._instance
    # valueëŠ” Thread ë¡œí• ê¹Œ ê³ ë¯¼ì¤‘ ì•„ì§ get_EngineName 
    def __init__(self, value=None):
        if not hasattr(self, 'initialized'):
            self.engine_Name = value
            self.initialized = True
            self._running = False
            
            # MVC ì»´í¬ë„ŒíŠ¸ ì§ì ‘ ìƒì„± - í•„ìˆ˜ ì»´í¬ë„ŒíŠ¸!
            print("ğŸ”§ MVC ì»´í¬ë„ŒíŠ¸ ì´ˆê¸°í™” ì¤‘...")
            self.model = AnalysisModel()
            self.controller = AnalysisController(self.model)
            self.view = AnalysisView(self.controller)
            print("âœ… MVC ì»´í¬ë„ŒíŠ¸ ìƒì„± ì™„ë£Œ!")

    def get_EngineName(self):
        return self.engine_Name
    
    def test_update_from_influx(self):
        print(f"{self.engine_Name} InfluxDB ë°ì´í„° ì¡°íšŒ ë° ë””ë°”ì´ìŠ¤ ì—…ë°ì´íŠ¸ ì¤‘!!!")
        print(f"controllerrrrr{self.controller}")
        reader = InfluxReader()
        try:
            bots = BOTS
            results = []
            for bot in bots:
                val = reader.latest_wh(bot, lookback="-30m")
                results.append({"bot": bot, "wh": val})
            print("InfluxDB ì¡°íšŒ ê²°ê³¼:", results)
            
            # Controllerë¥¼ í†µí•´ ë””ë°”ì´ìŠ¤ ì—…ë°ì´íŠ¸ 
            result = self.controller.update_devices_from_influx(results)
            if result['success']:
                print(f"âœ… ë””ë°”ì´ìŠ¤ ì²˜ë¦¬ ì™„ë£Œ: {result['message']}")
                print(f"   ì—…ë°ì´íŠ¸: {result['updated_devices']}")
                print(f"   ìƒì„±: {result['created_devices']}")
                if result['failed_devices']:
                    print(f"   ì‹¤íŒ¨: {result['failed_devices']}")
            else:
                print(f"âŒ ë””ë°”ì´ìŠ¤ ì²˜ë¦¬ ì‹¤íŒ¨: {result['message']}")
                
        finally:
            reader.close()
        print(f"{self.engine_Name} ë°ì´í„° ì—…ë°ì´íŠ¸ ì™„ë£Œ")
    
    
    def compare_etcd_vs_k8s(self, namespace="default"):
        """etcdì™€ Kubernetes API ë¹„êµ"""
        try:
            compare_result = self.controller.compare_etcd_vs_k8s_api(namespace)
            if compare_result['success']:
                comparison = compare_result['comparison']
                print(f"ğŸ” etcd vs K8s API ë¹„êµ ({namespace}):")
                print(f"   etcd Pod ìˆ˜: {comparison.get('etcd_count', 0)}")
                print(f"   K8s API Pod ìˆ˜: {comparison.get('api_count', 0)}")
                print(f"   ë™ê¸°í™” ìƒíƒœ: {'âœ… ì¼ì¹˜' if comparison.get('sync_status') == 'SYNCED' else 'âš ï¸ ë¶ˆì¼ì¹˜'}")
                
                if comparison.get('sync_status') != 'SYNCED':
                    if comparison.get('etcd_only'):
                        print(f"   etcdì—ë§Œ ìˆìŒ: {comparison['etcd_only']}")
                    if comparison.get('api_only'):
                        print(f"   K8s APIì—ë§Œ ìˆìŒ: {comparison['api_only']}")
                        
            else:
                print(f"âŒ etcd vs K8s ë¹„êµ ì‹¤íŒ¨: {compare_result.get('message', 'unknown')}")
        except Exception as e:
            print(f"âŒ etcd vs K8s ë¹„êµ ì¤‘ ì˜¤ë¥˜: {e}")
    


    def show_startup_banner(self):
        """ì‹œì‘ ë°°ë„ˆ ë° ìƒíƒœ í‘œì‹œ"""
        print(f"\n{'='*70}")
        print(f"ğŸš€ {self.engine_Name} ì‹¤ì‹œê°„ ëª¨ë‹ˆí„°ë§ ì‹œìŠ¤í…œ")
        print(f"{'='*70}")
        print(f"ğŸ“Š ê¸°ëŠ¥:")
        print(f"   â€¢ ë””ë°”ì´ìŠ¤ ìƒíƒœ ê´€ë¦¬")
        print(f"   â€¢ MALE ë©”íŠ¸ë¦­ ë¶„ì„")
        print(f"{'='*70}")
        print(f"{'='*70}\n")
    
    def show_monitoring_summary(self, loop_count):
        """ì£¼ê¸°ì  ëª¨ë‹ˆí„°ë§ ìš”ì•½ í‘œì‹œ"""
        print(f"\n{'='*50}")
        print(f"ğŸ“Š ëª¨ë‹ˆí„°ë§ ìš”ì•½ (ë£¨í”„ #{loop_count})")
        print(f"{'='*50}")
        
        # ì „ì²´ Pod ìš”ì•½
        try:
            summary_result = self.controller.get_pod_summary()
            if summary_result['success']:
                summary = summary_result['summary']
                print(f"ğŸ” Pod í˜„í™©:")
                print(f"   ì´ Pod: {summary.get('total_pods', 0)}")
                print(f"   ì‹¤í–‰ ì¤‘: {summary.get('running_pods', 0)}")
                print(f"   ë¶„ì„ ì™„ë£Œ: {summary.get('analyzed_pods', 0)}")
                print(f"   í‰ê·  MALE ì ìˆ˜: {summary.get('average_male_score', 0):.1f}")
        except Exception as e:
            print(f"âŒ Pod ìš”ì•½ ì¡°íšŒ ì‹¤íŒ¨: {e}")
        
       
        
        print(f"{'='*50}")
    
    def run(self):
        self._running = True
        
        # ì‹œì‘ ë°°ë„ˆ í‘œì‹œ
        self.show_startup_banner()
        
        loop_count = 0
        etcd_detail_interval = 3  # 3ë²ˆì˜ ë£¨í”„ë§ˆë‹¤ ìƒì„¸ etcd ë¶„ì„
        summary_interval = 6     # 6ë²ˆì˜ ë£¨í”„ë§ˆë‹¤ ìš”ì•½ í‘œì‹œ
        
        while self._running:
            current_time = time.strftime("%H:%M:%S")
            print(f"\nâ° [{current_time}] {self.engine_Name} ëª¨ë‹ˆí„°ë§ ë£¨í”„ #{loop_count + 1}")
            
            print(f"ğŸ“ˆ InfluxDB ë°ì´í„° ì—…ë°ì´íŠ¸...")# testì¸ ì´ìœ ëŠ” í˜„ì¬ ì¸í”ŒëŸ­ìŠ¤ë””ë¹„ì—ì„œ í˜¸ì¶œì„ 2ê°œì •ì ìœ¼ë¡œ í•¨. í‚¤ê°’ì „ì²´ë¥¼ ë„£ëŠ”ì½”ë“œê°€ í•„ìš”í•¨í•¨
            self.test_update_from_influx()
            
            # GRPC ë™ì‘ì „ì— ë¡œì»¬í…ŒìŠ¤íŠ¸ìš©ì½”ë“œ ... 
            print(f"ğŸ” ALE ì ìˆ˜ ì¡°íšŒ í…ŒìŠ¤íŠ¸...")
            self.test_get_ale_weight()
            
            # ì£¼ê¸°ì  ìš”ì•½ í‘œì‹œ (60ì´ˆë§ˆë‹¤ - 6ë²ˆì˜ ë£¨í”„ë§ˆë‹¤)
            if loop_count % summary_interval == 0 and loop_count > 0:
                self.show_monitoring_summary(loop_count + 1)
            
            loop_count += 1
            time.sleep(60)  # 10ì´ˆë§ˆë‹¤ ëª¨ë‹ˆí„°ë§ 

    
    def test_get_ale_weight(self):
        """GetALEWeight í•¨ìˆ˜ ë¡œì»¬ í˜¸ì¶œ í…ŒìŠ¤íŠ¸"""
        try:
            # Analysis_Viewì˜ GetALEWeight ë©”ì„œë“œë¥¼ ì§ì ‘ í˜¸ì¶œ (gRPC ì—†ì´)
            # requestì™€ contextëŠ” Noneìœ¼ë¡œ ì „ë‹¬ (ì‹¤ì œë¡œëŠ” ì‚¬ìš©í•˜ì§€ ì•ŠìŒ)
            result = self.view.GetALEWeight(None, None)
            
            if isinstance(result, dict) and result.get('success', False):
                ale_scores = result.get('ale_scores', {})
                total_devices = result.get('total_devices', 0)
                
                print(f"   âœ… ALE ì ìˆ˜ ì¡°íšŒ ì„±ê³µ: {total_devices}ê°œ ë””ë°”ì´ìŠ¤")
                
                # ê° ë””ë°”ì´ìŠ¤ì˜ ALE ì ìˆ˜ ì¶œë ¥
                for device_id, scores in ale_scores.items():
                    accuracy = scores.get('accuracy_score', 0.0)
                    latency = scores.get('latency_score', 0.0)
                    energy = scores.get('energy_score', 0.0)
                    print(f"      ğŸ“± {device_id}: A({accuracy:.1f}) L({latency:.1f}) E({energy:.1f})")
            else:
                message = result.get('message', 'ì•Œ ìˆ˜ ì—†ëŠ” ì˜¤ë¥˜') if isinstance(result, dict) else str(result)
                print(f"   âš ï¸ ALE ì ìˆ˜ ì¡°íšŒ ì‹¤íŒ¨: {message}")
                
        except Exception as e:
            print(f"   âŒ ALE ì ìˆ˜ ì¡°íšŒ ì¤‘ ì˜¤ë¥˜: {e}")
    
    def test_run(self):
        print(f"ğŸ§ª {self.engine_Name} í…ŒìŠ¤íŠ¸ ëª¨ë“œ")
        
        # 1. ê¸°ë³¸ InfluxDB í…ŒìŠ¤íŠ¸
        print(f"\n1. InfluxDB ì—°ê²° í…ŒìŠ¤íŠ¸")
        self.test_update_from_influx()
    
        print(f"\nâœ… í…ŒìŠ¤íŠ¸ ì™„ë£Œ")
    
    def stop(self):
        self._running = False
        # etcd ë¶„ì„ê¸° ë¦¬ì†ŒìŠ¤ ì •ë¦¬
        if hasattr(self.controller, 'close_etcd_analyzer'):
            self.controller.close_etcd_analyzer()